--- a/client/users.jade
+++ b/client/users.jade
@@ -1,24 +1,3 @@
-//- template(name='people')
-//-     .ui.padded.stackable.grid.pad-left
-//-         .centered.row
-//-             .six.wide.column.scrolling
-//-                 .ui.basic.segment
-//-                     if selected_tags
-//-                         #clear_tags.ui.red.icon.button
-//-                             i.remove.icon
-//-                     each selected_tags
-//-                         .unselect_tag.ui.red.button
-//-                             b #{this}
-//-                     each global_tags
-//-                         .select_tag.ui.compact.large.button
-//-                             | #{this.name}
-//-                             // small #{this.count}
-//- 
-//-             .ten.wide.column.scrolling
-//-                 each people
-//-                     +user_item
-                        
-                        
 template(name='user_item')                            
     .ui.stackable.grid.segment
         a.four.wide.column(href="/user/#{_id}/view") 
@@ -35,11 +14,11 @@ template(name='user_item')
                 each tags
                     .ui.basic.label #{this}
                 i.user.shield.icon
-                |Roles 
+                |roles 
                 each roles
                     .ui.basic.label #{this}
                 i.message.icon
-                |Emails
+                |emails
                 if emails
                     each emails
                         .ui.basic.label #{address}
@@ -48,18 +27,18 @@ template(name='user_item')
             //     +toggle_friend
             //- +user_connect_button        
             a.ui.circular.button(href="/user/#{username}")
-                |View #{username}
+                |view #{username}
                 i.right.chevron.icon
             
             
             
-template(name='user_Gallery')
-    .ui.center.aligned.white.header 
-        i.gallery.icon
-        |Gallery
+template(name='user_gallery')
+    .ui.header 
+        +i name='gallery'
+        |#{user_from_username_param.username} gallery
     .add_photo.ui.button
         i.plus.icon
-        |Photo
+        |photo
     .ui.padded.stackable.three.column.grid
         each photos
             .column
@@ -70,10 +49,20 @@ template(name='user_Gallery')
 template(name='user_events')
     .ui.center.aligned.white.header 
         i.calendar.icon
-        |Events
+        |#{user_from_username_param.username} events
     .add_event.ui.button
         i.plus.icon
-        |Event
+        |event
+    .ui.padded.stackable.three.column.grid
+        each events
+            .column
+                img.ui.image(src="{{c.url image_id width=400 height=400 gravity='face' crop='fill'}}")
+            
+            
+template(name='user_documents')
+    .ui.header 
+        +i name='documents'
+        |#{user_from_username_param.username}'s documents
     .ui.padded.stackable.three.column.grid
         each events
             .column
@@ -84,7 +73,7 @@ template(name='user_events')
 template(name='user_contact')
     .ui.center.aligned.header 
         i.contact.icon
-        | Contact
+        | contact
     .ui.form
         .field
             label message
@@ -98,7 +87,7 @@ template(name='user_contact_info')
     .shadowed-box
         .ui.header
             +i name='phone'
-            |Contact
+            |contact
         .ui.icon.circular.button.toggle_edit
             if is_editing
                 i.green.checkmark.icon
@@ -130,42 +119,35 @@ template(name='user_contact_info')
             
             
 template(name='users') 
-    .ui.padded.grid
+    .ui.padded.stackable.grid
+        .ui.hidden.divider
         .row
-            .sixteen.wide.column
+            .four.wide.column
                 h1.ui.center.aligned.grey.header 
                     +i name='groups'
                     //- i.users.icon
                     |users
-                .ui.left.icon.huge.fluid.input
-                    i.search.icon
-                    input.username_search(type='text' placeholder='lookup name...')
+                +user_cloud
+            .twelve.wide.column
+                //- .ui.left.icon.large.fluid.input
+                //-     i.search.icon
+                //-     input.username_search(type='text' placeholder='filter username...')
                 .ui.centered.four.stackable.cards
                     each users
                         +user
                 
 template(name='user')                
-    .ui.card
+    .ui.link.card.user_card
         .image
             //- a(href="/user/#{username}/")
             //- img(src="{{c.url image_id height=400 width=400 background='white' crop='pad'}}")
-            img(src="{{c.url image_id height=300 width=300 gravity='face' crop='fill'}}")
+            img.ui.link.image(src="{{c.url image_id height=300 width=300 gravity='face' crop='fill'}}")
         .content
-            a(href="/user/#{username}/")
-                h2.ui.center.aligned.header #{first_name} #{last_name} 
-                .ui.small.grey.header @#{username}
-            each five_tags
-                .ui.compact.small.circular.basic.button.person_tag(class=tag_class) 
-                    strong #{this}
-            +text_view key='first_name' label='First Name'
-            +text_view key='last_name' label='Last Name'
-            +text_view key='address' label='Address'
-            +number_view key='unit_number' label='Unit #'
-            +number_view key='building_number' label='Building #'
-            +text_view key='email' label='Email'
-            +phone_view key='phone' label='Phone'
-            +date_view key='start_date' label='Start Date'
-            +date_view key='expiration_date' label='Expiration Date'
-            +user_connect_button
+            .ui.center.aligned.grey.header #{first_name} #{last_name} 
+                //- .ui.small.grey.header @#{username}
+            //- each five_tags
+            //-     .ui.compact.small.circular.basic.button.person_tag(class=tag_class) 
+            //-         strong #{this}
+            //- +user_connect_button
 
             
