--- a/client/blocks.jade
+++ b/client/blocks.jade
@@ -154,6 +154,12 @@ template(name='author_info')
                 img.ui.avatar.image(src="{{c.url image_id width=100 height=100 gravity='face' crop='fill'}}")
              by #{first_name} #{last_name}
 
+template(name='small_author_info')
+    with author
+        if image_id
+            img.ui.avatar.image(src="{{c.url image_id width=100 height=100 gravity='face' crop='fill'}}")
+         by #{first_name} #{last_name}
+
 template(name='creation_info')
     .ui.small.grey.inline.header #{when}
 
