--- a/client/client.jade
+++ b/client/client.jade
@@ -26,13 +26,14 @@ template(name='layout')
     //- img.ui.fluid.image(src="{{c.url 'stars_big' width=2000}}")
     +nav
     //- if currentUser
-    .ui.stackable.global_container.grid(class=invert_class)
-        .centered.row
-            .sixteen.wide.column
+    .global_container
+        +yield
+    //- .ui.stackable.global_container.grid(class=invert_class)
+    //-     .centered.row
+    //-         .sixteen.wide.column
                 //- if current_session_doc
                 //-     +checkin_card current_session_doc
                 //- else 
-                +yield
         //- if is_eric
         //- +footer 
 
