--- a/client/nav.jade
+++ b/client/nav.jade
@@ -1,7 +1,7 @@
 template(name='nav')
     unless is_frontdesk
         //- .ui.borderless.attached.big.inverted.menu.topnav
-        .ui.borderless.inverted.big.menu.fixed.topnav.blue
+        .ui.borderless.inverted.big.menu.fixed.topnav.teal
             //- a.toggle_sidebar.icon.item.sidebar_on
             //-     i.large.sidebar.icon
             if is_loading
@@ -16,11 +16,8 @@ template(name='nav')
                 //- a.icon.item(href='/dashboard' class="{{isActivePath '/dashboard'}}")
                 //-     //- i.dashboard.icon
                 //-     +i name='dashboard'
-                //- a.icon.item(href='/home' class="{{isActivePath '/home'}}")
-                //-     i.th.large.icon
-                //- a.icon.item(href='/users' class="{{isActivePath '/users'}}")
-                //-     //- i.users.large.icon
-                //-     +i name='groups' classes='ui avatar image'
+                a.icon.item(href='/users' class="{{isActivePath '/users'}}")
+                    +i name='groups' classes='ui avatar image'
                     //- .mobile.hidden &nbsp; users
                     //- .mobile.hidden &nbsp; dashboard
                 //- if is_admin
@@ -40,15 +37,6 @@ template(name='nav')
                     //-     //- +i name='food'
                     //-     i.food.icon
                     //-     .mobile.hidden &nbsp; Food
-                //- if is_admin
-                //-     a.icon.item(href='/alpha' class="{{isActivePath '/alpha'}}")
-                //-         +i name='alpha'
-                        //- i.campground.large.icon
-                        //- .mobile.hidden Alpha
-                    //- a.icon.item(href='/omega' class="{{isActivePath '/omega'}}")
-                    //-     +i name='omega'
-                        //- .mobile.hidden Omega
-                    
                 //- a.item.set_marketplace(href='/m/marketplace' class="{{isActivePath '/m/marketplace'}}")
                 //-     +i name='shop'
             .right.menu
@@ -65,8 +53,8 @@ template(name='nav')
                             //- a.icon.item(href="/user/#{currentUser.username}" class="{{isActiveRoute regex='profile'}}")
                             //-     +i name='new-post'
                             //-     //- i.big.mail.icon(class=mail_icon_class title="#{unread_count} Unread")
-                            a.icon.item(href="/chat" class="{{isActivePath '/chat'}}" title='chat')
-                                +i name='chat'
+                            //- a.icon.item(href="/chat" class="{{isActivePath '/chat'}}" title='chat')
+                            //-     +i name='chat'
                             //- a.icon.item(href="/my_transactions" class="{{isActivePath '/my_transactions'}}" title='my transactions')
                             //-     +i name='ledger'
                                 //- i.list.icon
@@ -102,9 +90,7 @@ template(name='nav')
                     //-         i.sign.out.large.icon
                 else
                     a.item(href='/login' title='login') 
-                        i.sign.in.large.icon
-                        //- +i name='enter-2' classes='ui mini inline image'
-                        |login
+                        +i name='enter-2' classes='ui avatar image'
         if currentUser.show_bookmarked_model_bar
             .ui.inverted.attached.borderless.menu.topnav.grblue
                 each bookmarked_models
@@ -131,7 +117,7 @@ template(name='footer')
                         img(alt='', border='0', src='https://www.paypal.com/en_US/i/scr/pixel.gif', width='1', height='1')
                         button.ui.large.icon.button(type='submit')
                             //- i.pied.piper.alternate.large.icon
-                            |donate
+                            +i name='donate'
                 
                 if is_dev    
                     with current_user
