--- a/client/profile/user_edit.jade
+++ b/client/profile/user_edit.jade
@@ -23,60 +23,29 @@ template(name='user_edit')
                                 i.remove.icon
                                 |delete user
                 .column
-                    .ui.form
-                        if user_is_resident_or_owner
-                            if is_staff
-                                +text_edit key='first_name' label='first name' icon='header' direct=true
-                                +text_edit key='last_name' label='last name' icon='text' direct=true
-                                +text_edit key='address' label='address' icon='marker' direct=true
-                                +number_edit key='unit_number' label='unit #' icon='home' direct=true
-                                +number_edit key='building_number' label='building #' icon='building' direct=true
-                                //- +text_edit key='building_code' label='building code' icon='building' direct=true
-                                +number_edit key='healthclub_code' label='keycard code' icon='barcode' direct=true
-                                +boolean_edit key='owner' label='owner' direct=true
-                                .ui.segment
-                                    .ui.header 
-                                        i.blue.envelope.icon
-                                        |Email(s)
-                                    +emails_edit
-                            else
-                                +text_view key='first_name' label='first name' direct=true
-                                +text_view key='last_name' label='last name' direct=true
-                                +text_view key='address' label='address' direct=true
-                        +phone_edit key='phone' label='phone' icon='telephone' direct=true
-                        +image_edit key='banner_image_id' label='banner image' direct=true
-                        +text_edit key='tagline' label='tag line' direct=true
-                        
-                        +array_edit key='tags' label='tags' direct=true
+                    +text_edit key='first_name' label='first name' icon='header' direct=true
+                    +text_edit key='last_name' label='last name' icon='text' direct=true
+                    +text_edit key='address' label='address' icon='marker' direct=true
+                    .ui.segment
+                        .ui.header 
+                            i.blue.envelope.icon
+                            |Email(s)
+                        +emails_edit
+                    +phone_edit key='phone' label='phone' icon='phone' direct=true
+                    +text_edit key='tagline' label='tag line' icon='signature' direct=true
+                    +array_edit key='tags' label='tags' icon='tags' direct=true
+                    +array_edit key='location_tags' label='location tags' icon='location' direct=true
                 .column
-                    //- +payment_methods
-                    //- +user_tribe_editor    
-                    +user_settings
+                    +text_edit key='spirit_animal' label='spirit animal' icon='vominitg-unicorn' direct=true
+                    +link_edit key='link' label='link' icon='link' direct=true
                     
                     
-template(name='user_settings')
-    .ui.segment
-        .ui.header 
-            +i name='settings'
-            |settings
-        with user_from_username_param
-            +boolean_edit key='show_bookmarked_model_bar' label='show bookmarked model bar' direct=true
-
-
 template(name='user_model_editor')
     .ui.header profile sections
     each models
         .ui.basic.button.toggle_model(class=user_model_class title=title)
             i.icon(class=icon)
             |#{title}
-            
-template(name='user_tribe_editor')
-    .ui.header my tribes
-    each my_tribes
-        .ui.basic.button.select_tribe(class=user_tribe_class title=title)
-            i.icon(class=icon)
-            |#{title}
-            
             
 template(name='user_single_doc_ref_editor')
     .ui.header #{label}
@@ -87,7 +56,7 @@ template(name='user_single_doc_ref_editor')
 
 template(name='username_edit')
     .ui.small.header 
-        i.i.cursor.icon
+        +i name='username'
         |change username [#{user_from_username_param.username}]
     .ui.icon.fluid.input
         input.new_username(type='text' placeholder='new username...')
@@ -97,7 +66,7 @@ template(name='username_edit')
      
 template(name='phone_editor')
     .ui.small.header    
-        i.phone.icon
+        +i name='phone'
         |phone
     .ui.icon.fluid.input(title='Add Phone')
         i.plus.icon
