--- a/client/styles.css
+++ b/client/styles.css
@@ -3,7 +3,7 @@ body {
     font-size: 110% !important;
     /*line-height: 200% !important;*/
     /*background: #3d3d3d !important;*/
-    background: rgba(0, 0, 0, .02) !important
+    background: rgba(0, 0, 0, .05) !important
     /* background: #0e0e44 !important; */
 }
 
@@ -50,11 +50,6 @@ body {
   /* border-radius: 5px; */
 }
 
-.abril{
-    font-family: 'Abril Fatface', serif !important;
-}
-
-
 .pointer:hover{
     cursor: pointer !important;
     /* -webkit-filter: drop-shadow(5px 5px 5px #222);
@@ -98,13 +93,13 @@ input{
 }
 
 input.username_search{
-    -webkit-border-radius: 25px !important; */
-    border-radius: 20px !important;
+    -webkit-border-radius: 10px !important; */
+    border-radius: 10px !important;
     /* margin-bottom: 5px !important;
     margin-top: 5px !important; */
     background: rgba(250, 250, 250, 0.9) !important;
     opacity: 1;
-    border-width: 3px !important;
+    border-width: 1px !important;
     border-color: #a67c00 !important;
     box-shadow: 0 2px 5px 2px rgba(50, 50, 100, 0.1) !important;
 }
@@ -182,8 +177,8 @@ input.username_search{
     /* -moz-border-radius: 20px !important; */
     /* border-radius: 20px !important; */
 }
-.global_container.ui.grid {
-    margin-top: 15px !important;
+.global_container{
+    margin-top: 50px !important;
 }
 
 .banner_image {
@@ -472,7 +467,7 @@ a {
 .scrolling{
 	overflow-y:scroll;
 	overflow-x:hidden;
-	max-height:70vh;
+	max-height:80vh;
 	/*max-height:85vh;*/
 	/* padding-top: 1em; */
 	/*padding-left: 1em;*/
