--- a/components/rent.jade
+++ b/components/rent.jade
@@ -2,11 +2,33 @@ template(name='rentals')
     .ui.header 
         +i name='clock'
         |rentals
+    .row
+        .sixteen.wide.column
+            .ui.small.header 
+                +i name='future' classes='ui mini inline image'
+                |future reservations
+            each future_reservations
+                .ui.fluid.segment
+                    .ui.inline.header #{_author_username}
+                    .ui.inline.small.header from {{short_date start_datetime}} to {{short_date end_datetime}} (#{hour_duration} hours)
+                    //- .ui.inline.header starts {{from_now start_datetime}} ({{long_date start_datetime}})
+                    //- .ui.inline.header ends {{from_now end_datetime}} ({{long_date end_datetime}})
+                    if is_dev
+                        +remove_button
+                    .ui.button.reserve_after 
+                        +i name='waiting-room' classes='ui avatar image'
+                        |reserve after
+        
     if active_reservation
         with active_reservation
             .ui.header active
             .ui.header #{hour_duration} hrs
             .ui.header $#{reservation_cost}
+            if already_started
+                .ui.basic.label started
+            //- if is_author
+            //-     +remove_button
+            
     //- unless is_author
     //-     +view_rental
     //- .ui.green.button.rent Rent
@@ -18,7 +40,7 @@ template(name='rentals')
     .ui.small.header 
         +i name='clock'
         |#{current_month} reservations
-    .ui.celled.grid
+    .ui.celled.white.grid
         .seven.column.row
             .header.column sun
             .header.column mon
@@ -32,27 +54,25 @@ template(name='rentals')
                 +month_day_template
     each reservations
         .ui.segment
-            .ui.small.inline.header 
-                i.clock.grey.icon
-                |#{hour}:00
-            .ui.inline.small.header 
-                |#{date} #{notes}
+            .ui.inline.small.header from {{short_date start_datetime}} to {{short_date end_datetime}} (#{hour_duration} hours)
+            |#{notes}
             +author_info
             if is_author
                 +remove_button
 
 template(name='month_day_template')
-    .column
-        a(href="/shop/#{product._id}/daily_calendar/#{month}/#{day}/#{year}") #{this}
-        .ui.basic.label(title='reservations') #{reservation_count}
-        //- if reservation_exists
-        //-     //- with reservation_exists
-        //-         |#{_id}
-        //-     .ui.icon.disabled.button
-        //-         i.ban.icon(title='unavailable')
-        //- else
-        //-     .ui.icon.button.new_reservation
-        //-         i.checkmark.icon(title='available')
+    .white.column
+        .ui.big.basic.label
+            a(href="/shop/#{product._id}/daily_calendar/#{month}/#{day}/#{year}") #{this}
+            div(title='reservations') #{reservation_count}
+            //- if reservation_exists
+            //-     //- with reservation_exists
+            //-         |#{_id}
+            //-     .ui.icon.disabled.button
+            //-         i.ban.icon(title='unavailable')
+            //- else
+            //-     .ui.icon.button.new_reservation
+            //-         i.checkmark.icon(title='available')
                     
 template(name='upcoming_day')
     a.ui.small.grey.header(href="/shop/#{product._id}/daily_calendar/#{month}/#{day}/#{year}") #{this.data.long_form}
